syntax = "proto3";

package proto;

message HelloRequest{
    int32 requestId = 1;
    string data =2;
}

message HelloResponse {
    int32 code = 1;
    bool isSuccess = 2;
    string result =3;
}

service ClientStream {
    rpc HelloServer (stream HelloRequest) returns (HelloResponse);
}